--- a/index.html
+++ b/index.html
@@ -94,16 +94,144 @@
         <h1>利用規約の確認</h1>
         <p style="font-size: 12px; color: red;">※精読のためスクロール速度を制限しています。</p>
         <div class="terms-box" id="termsBox">
-            <h2>第1条 適用</h2><p>本規約は、本サービスの利用に関する一切の条件を定めるものです。</p>
-            <h2>第2条 視聴義務</h2><p>同意後、提供される特別映像を最後まで視聴する義務を負うものとします。</p>
-            <h2>第3条 不正の禁止</h2><p>再生速度の変更、シーク操作、スクリプトによる回避行為は一切禁止します。</p>
-            <p>...</p><p>...</p><p>（中略：ここに長い文章が入る）</p><p>...</p>
-            <p style="text-align: center; padding: 50px 0;">── 規約の終端 ──</p>
+           この利用規約（以下，「本規約」といいます。）は，＿＿＿＿＿（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。
+</p>
+
+<h2>第1条（適用）</h2>
+<p>本規約は，ユーザーと当社との間の本サービスの利用に関わる一切の関係に適用されるものとします。</p>
+<p>
+当社は本サービスに関し，本規約のほか，ご利用にあたってのルール等，各種の定め（以下，「個別規定」といいます。）をすることがあります。これら個別規定はその名称のいかんに関わらず，本規約の一部を構成するものとします。
+</p>
+<p>
+本規約の規定が前条の個別規定の規定と矛盾する場合には，個別規定において特段の定めなき限り，個別規定の規定が優先されるものとします。
+</p>
+
+<h2>第2条（利用登録）</h2>
+<p>
+本サービスにおいては，登録希望者が本規約に同意の上，当社の定める方法によって利用登録を申請し，当社がこれを承認することによって，利用登録が完了するものとします。
+</p>
+<p>
+当社は，利用登録の申請者に以下の事由があると判断した場合，利用登録の申請を承認しないことがあり，その理由については一切の開示義務を負わないものとします。
+</p>
+<ul>
+    <li>利用登録の申請に際して虚偽の事項を届け出た場合</li>
+    <li>本規約に違反したことがある者からの申請である場合</li>
+    <li>その他，当社が利用登録を相当でないと判断した場合</li>
+</ul>
+
+<h2>第3条（ユーザーIDおよびパスワードの管理）</h2>
+<p>
+ユーザーは，自己の責任において，本サービスのユーザーIDおよびパスワードを適切に管理するものとします。
+</p>
+<p>
+ユーザーは，いかなる場合にも，ユーザーIDおよびパスワードを第三者に譲渡または貸与し，もしくは第三者と共用することはできません。当社は，ユーザーIDとパスワードの組み合わせが登録情報と一致してログインされた場合には，そのユーザーIDを登録しているユーザー自身による利用とみなします。
+</p>
+<p>
+ユーザーID及びパスワードが第三者によって使用されたことによって生じた損害は，当社に故意又は重大な過失がある場合を除き，当社は一切の責任を負わないものとします。
+</p>
+
+<h2>第4条（利用料金および支払方法）</h2>
+<p>
+ユーザーは，本サービスの有料部分の対価として，当社が別途定め，本ウェブサイトに表示する利用料金を，当社が指定する方法により支払うものとします。
+</p>
+<p>
+ユーザーが利用料金の支払を遅滞した場合には，ユーザーは年14.6％の割合による遅延損害金を支払うものとします。
+</p>
+
+<h2>第5条（禁止事項）</h2>
+<p>ユーザーは，本サービスの利用にあたり，以下の行為をしてはなりません。</p>
+<ul>
+    <li>法令または公序良俗に違反する行為</li>
+    <li>犯罪行為に関連する行為</li>
+    <li>著作権，商標権ほか知的財産権を侵害する行為</li>
+    <li>サーバーまたはネットワークの機能を破壊・妨害する行為</li>
+    <li>本サービスによって得られた情報を商業的に利用する行為</li>
+    <li>当社のサービスの運営を妨害するおそれのある行為</li>
+    <li>不正アクセスまたはこれを試みる行為</li>
+    <li>個人情報等を収集または蓄積する行為</li>
+    <li>不正な目的を持って本サービスを利用する行為</li>
+    <li>他のユーザーまたは第三者に不利益・損害・不快感を与える行為</li>
+    <li>他のユーザーに成りすます行為</li>
+    <li>無断での宣伝，広告，勧誘，営業行為</li>
+    <li>面識のない異性との出会いを目的とした行為</li>
+    <li>反社会的勢力に利益を供与する行為</li>
+    <li>その他，当社が不適切と判断する行為</li>
+</ul>
+
+<h2>第6条（本サービスの提供の停止等）</h2>
+<p>
+当社は，以下のいずれかの事由があると判断した場合，ユーザーに事前に通知することなく本サービスの全部または一部の提供を停止または中断することができるものとします。
+</p>
+<ul>
+    <li>システムの保守点検または更新を行う場合</li>
+    <li>天災等の不可抗力により提供が困難となった場合</li>
+    <li>通信回線等が事故により停止した場合</li>
+    <li>その他，当社が提供困難と判断した場合</li>
+</ul>
+<p>
+当社は，本サービスの停止または中断により生じた損害について，一切の責任を負いません。
+</p>
+
+<h2>第7条（利用制限および登録抹消）</h2>
+<p>
+当社は，ユーザーが以下に該当する場合，事前通知なく利用制限または登録抹消を行うことができます。
+</p>
+<ul>
+    <li>本規約に違反した場合</li>
+    <li>登録事項に虚偽が判明した場合</li>
+    <li>料金等の支払債務を履行しない場合</li>
+    <li>一定期間連絡が取れない場合</li>
+    <li>一定期間利用がない場合</li>
+    <li>その他，当社が不適当と判断した場合</li>
+</ul>
+
+<h2>第8条（退会）</h2>
+<p>
+ユーザーは，当社の定める退会手続により，本サービスから退会できるものとします。
+</p>
+
+<h2>第9条（保証の否認および免責事項）</h2>
+<p>
+当社は，本サービスに瑕疵がないことを保証しません。
+</p>
+<p>
+当社は，本サービスに起因して生じた損害について，当社の故意又は重過失による場合を除き，一切の責任を負いません。
+</p>
+
+<h2>第10条（サービス内容の変更等）</h2>
+<p>
+当社は，事前告知の上，本サービスの内容を変更，追加または廃止することがあります。
+</p>
+
+<h2>第11条（利用規約の変更）</h2>
+<p>
+当社は，必要に応じて本規約を変更できるものとします。
+</p>
+
+<h2>第12条（個人情報の取扱い）</h2>
+<p>
+当社は，取得した個人情報をプライバシーポリシーに従い適切に取り扱います。
+</p>
+
+<h2>第13条（通知または連絡）</h2>
+<p>
+通知または連絡は，当社の定める方法により行います。
+</p>
+
+<h2>第14条（権利義務の譲渡の禁止）</h2>
+<p>
+ユーザーは，当社の事前承諾なく権利義務を譲渡できません。
+</p>
+
+<h2>第15条（準拠法・裁判管轄）</h2>
+<p>
+本規約は日本法を準拠法とし，紛争は当社本店所在地を管轄する裁判所を専属管轄とします。
+</p>
         </div>
         <label style="display: block; text-align: center; margin-bottom: 20px;">
             <input type="checkbox" id="agreeCheck" disabled> 規約に同意します
         </label>
-        <div id="submitBtn" class="btn-submit">同意してサービスを開始</div>
+        <div id="submitBtn" class="btn-submit">同意してウェブ閲覧を開始</div>
     </div>
 
     <div id="video-overlay">
@@ -175,4 +303,5 @@ video.addEventListener('ended', () => {
 });
     </script>
 </body>
+
 </html>
